# punchcraft-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PunchCraft API Documentation.docx  PunchCraft.postman_collection.json  Punchcraft-openapi.yaml  README.md  github  github.pub
docs/: api-docs.md  database.md  deployment.md  docs-collection.md
src/: lib.rs  main.rs
src/admin/: audit.rs  handlers.rs  mod.rs  routes.rs  service.rs
src/auth/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/common/: db.rs  email.rs  errors.rs  middleware.rs  mod.rs  response.rs  serde_helpers.rs
src/contact_requests/: handlers.rs  models.rs  repository.rs  routes.rs  service.rs
src/directories/: handlers.rs  routes.rs  service.rs
src/docs/: mod.rs
src/favorites/: handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/media/: cloudinary.rs  handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/moderation/: handlers.rs  models.rs  repository.rs  routes.rs  service.rs
src/notifications/: handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/profiles/: handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
src/users/: handlers.rs  mod.rs  models.rs  routes.rs  service.rs
src/verification/: handlers.rs  models.rs  repository.rs  routes.rs  service.rs
tests/common/: mod.rs
tests/integration/: admin.rs  auth.rs  contact_requests.rs  favorites.rs  mod.rs  moderation.rs  notifications.rs  profiles.rs  users.rs  verification.rs
tests/unit/: auth_validation.rs  middleware.rs  mod.rs  (+1 more)
