[package]
name = "punchcraft"
version = "0.1.0"
edition = "2024"

[lib]
name = "punchcraft"
path = "src/lib.rs"

[[bin]]
name = "punchcraft"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# MongoDB driver
mongodb = { version = "3" }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT
jsonwebtoken = "9"

# Password hashing
bcrypt = "0.15"

# Config / env
dotenvy = "0.15"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Cloudinary (HTTP client for upload API)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Multipart form data parsing for media uploads
actix-multipart = "0.7"

# SHA-1 for Cloudinary API request signing
sha1 = "0.10"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-http = "3"
tokio = { version = "1", features = ["full"] }
serde_json = "1"

